fixed few warnings